--- a/Database.yml
+++ b/Database.yml
@@ -29,3 +29,16 @@ production:
   database: comics_catalog_production  
   username: comics_catalog 
   password:
+      
+      
+tables:
+  - dept
+  - emp
+  
+processes:
+    - proc1:
+        name: hello
+        proc: 
+    - proc2:
+        name: world
+        proc: 
